Remove the maximum 2 checks message

--- a/polybookexchange/templates/polybookexchange/add_exemplar.html
+++ b/polybookexchange/templates/polybookexchange/add_exemplar.html
@@ -70,7 +70,7 @@
             <div class="panel-body">
 
                 <div class="alert alert-info">
-                    {% trans "Please select sections/years when this book is used." %} <b>{% trans "Maximium two checks !" %}</b>
+                    {% trans "Please select sections/years when this book is used." %}
                 </div>
 
                 <table class="table table-condensed table-hover">
