--- a/polybookexchange/templates/polybookexchange/propose.html
+++ b/polybookexchange/templates/polybookexchange/propose.html
@@ -22,8 +22,8 @@
     <form method="POST" onsubmit="if (!$('#terms').is(':checked')) { alert('{% trans "Please accepts terms !" %}'); return false }">
         {% csrf_token %}
 
-        <div class="form-group">
-            <label>{% trans "ISBN of your book:" %}</label>
+        <div class="form-group" id="form-group-isbn">
+            <label class="control-label">{% trans "ISBN of your book:" %}</label>
             <div class="input-group">
                 <input name="isbn" type="text" id="isbn" class="form-control" value="{{isbn}}">
                 <span class="input-group-addon" id="isbn-result"></span>
@@ -72,7 +72,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>{% trans "Price asked:" %}</label>
-                                <input name="price" type="text" class="form-control" value="{{price}}">
+                                <input name="price" type="text" class="form-control" value="{{price|floatformat:"0"}}">
                             </div>
                             <div class="form-group">
                                 <label>{% trans "Comments:" %}</label>
