--- a/polybookexchange/templates/polybookexchange/add_exemplar.html
+++ b/polybookexchange/templates/polybookexchange/add_exemplar.html
@@ -51,7 +51,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>{% trans "Price asked:" %}</label>
-                                <input name="price" type="text" class="form-control" value="{{candidate.price}}">
+                                <input name="price" type="text" class="form-control" value="{{candidate.price|floatformat:"0"}}">
                             </div>
                             <div class="form-group">
                                 <label>{% trans "Comments:" %}</label>
