--- a/polybookexchange/templates/polybookexchange/propose.html
+++ b/polybookexchange/templates/polybookexchange/propose.html
@@ -29,7 +29,7 @@
                 <span class="input-group-addon" id="isbn-result"></span>
             </div>
             <span class="help-block">
-                {% trans "Begin by 978". %}
+                {% trans "Begin by 978" %}
                 <small>
                     <a href="http://{% trans "en" %}.wikipedia.org/wiki/ISBN" target="_blank">
                         {% trans "What is an ISBN?" %}
