Fix error when book hasen't been buyed

--- a/polybookexchange/templates/polybookexchange/exemplar_print.html
+++ b/polybookexchange/templates/polybookexchange/exemplar_print.html
@@ -46,7 +46,7 @@
 
                 <tr>
                     <td colspan="2"><img src="{% url 'polybookexchange.views.gen_bar_code' exemplar.seller_id %}"></td>
-                    <td colspan="2"><img src="{% url 'polybookexchange.views.gen_bar_code' exemplar.buyer_id %}"></td>
+                    <td colspan="2">{% if exemplar.buyer_id %}<img src="{% url 'polybookexchange.views.gen_bar_code' exemplar.buyer_id %}">{% endif %}</td>
                 </tr>
 
             {% endif %}
