--- a/polybookexchange/templates/polybookexchange/howto.html
+++ b/polybookexchange/templates/polybookexchange/howto.html
@@ -20,10 +20,17 @@
 
     <h3>{% trans "To sell a book" %}</h3>
 
+    <h4>{% trans "First step" %}</h4>
+
     <ul>
         <li>{% trans "You click on 'Propose a new book' in the left menu" %}.</li>
         <li>{% trans "You fill required informations and you print the generated page." %}</li>
         <li>{% trans "You bring your book, with the printed page at the AGEPoly's desk." %}</li>
+    </ul>
+
+    <h4>{% trans "Second step" %}</h4>
+
+    <ul>
         <li>{% trans "We put your book in the system." %}</li>
         <li>{% trans "You get an automatic confirmation on your @epfl.ch address." %}</li>
         <li>{% trans "When your book has been sold by another student, you will also recive an automatic email" %}</li>
@@ -35,7 +42,7 @@
     <ul>
         <li>{% trans "You browse this website to find a book" %}</li>
         <li>{% trans "You memorise the number of the book (NOT THE ISBN NUMBER !)" %}</li>
-        <li>{% trans "If you found what you needed, you can come to the AGEPOly's desk with the money" %}</li>
+        <li>{% trans "If you found what you needed, you can come to the AGEPoly's desk with the money (only in cash !)" %}</li>
         <li>{% trans "You now have a new book !" %}</li>
     </ul>
 
@@ -46,10 +53,10 @@
         <li>{% trans "The seller must be an EPFL student" %}</li>
         <li>{% trans "The AGEPoly won't be responsible for any lost or stolen book" %}</li>
         <li>{% trans "The AGEPoly won't be responsible for any deterioration of a book" %}</li>
-        <li>{% trans "Handouts cannot be sold using the book exchange" %}</li>
+        <li>{% trans "Handouts and language learning books cannot be sold using the book exchange" %}</li>
         <li>{% trans "The service is free, for EPFL students" %}</li>
-        <li>{% trans "If a book isn't sold or taken back after 15 months," %}<span class="text-danger">{% trans "it's your responsibilty to get your book back at AGEPoly's desk, otherwhise he will be given to the central library, without the posibily to get your money !" %}</span></li>
-        <li>{% trans "Il you left the EPFL, it's your responsibilty to follow your books. You have to contact the AGEPoly." %}</li>
+        <li>{% trans "If a book isn't sold or taken back after 14 months," %}<span class="text-danger">{% trans "it's your responsibilty to get your book back at AGEPoly's desk, otherwhise he will be given to the central library, without the posibily to get it or your money back !" %}</span></li>
+        <li>{% trans "Il you left the EPFL, it's your responsibilty to follow your books. You have to contact AGEPoly as soon as possible." %}</li>
     </ul>
 
 
