--- a/polybookexchange/templates/polybookexchange/base.html
+++ b/polybookexchange/templates/polybookexchange/base.html
@@ -125,6 +125,7 @@
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
             ga('create', '{{ settings.GOOGLE_ANALYTICS_ID }}', 'auto');
+            ga('set', 'anonymizeIp', true);
             ga('set', 'contentGroup1', 'BourseAuxLivres');
             ga('send', 'pageview');
 
