Adapted the text for boursobouquins - mars 2022

--- a/polybookexchange/templates/polybookexchange/candidate_fiche.html
+++ b/polybookexchange/templates/polybookexchange/candidate_fiche.html
@@ -5,7 +5,7 @@
     <body>
         <h2>{% trans "Book proposition's details " %}</h2>
 
-        <p>{% trans "You have to <a href='javascript:window.print()'>print</a> this page et put it inside the book you bring to AGEPoly's desk " %}<br />
+        <p>{% trans "You have to <a href='javascript:window.print()'>print</a> this page and put it inside the book you bring to AGEPoly's event "it inside the book you bring to AGEPoly's event from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515 (or present this document there) " %}<br />
         <br />
 
         <table>
@@ -32,11 +32,10 @@
 
         </table>
 
-        {% trans "Your book will only be available in the sell area when you brigen him to AGEPoly's desk and we validated it" %}<br />
+        {% trans "Your book will only be available in the sell area when you bring him to AGEPoly's event and we validated it" %}<br />
 
         {% trans "You can access this page later using the left menu if you cannot print it now." %}<br /><br />
 
-        {% trans "You now have 14 days to bring the book to AGEPoly's desk, after the delay you will have to start over." %}
         </p>
         <span style="float: right;"><a href="javascript:window.close();">{% trans "Close this window" %}</a></span>
     </body>
