--- a/polybookexchange/templates/polybookexchange/howto.html
+++ b/polybookexchange/templates/polybookexchange/howto.html
@@ -25,7 +25,7 @@
     <ul>
         <li>{% trans "You click on 'Propose a new book' in the left menu" %}.</li>
         <li>{% trans "You fill required informations and you print the generated page." %}</li>
-        <li>{% trans "You bring your book, with the printed page at the AGEPoly's desk." %}</li>
+        <li>{% trans "You bring your book, with the printed page at AGEPoly's event." %}</li>
     </ul>
 
     <h4>{% trans "Second step" %}</h4>
@@ -33,8 +33,8 @@
     <ul>
         <li>{% trans "We put your book in the system." %}</li>
         <li>{% trans "You get an automatic confirmation on your @epfl.ch address." %}</li>
-        <li>{% trans "When your book has been sold by another student, you will also recive an automatic email" %}</li>
-        <li>{% trans "At least, you can comme back to the AGEPoly's desk, with you student card (Camipro) to collect your money" %}.</li>
+        <li>{% trans "When your book has been sold to another student, you will also receive an automatic email" %}</li>
+        <li>{% trans "At least, you can come back to AGEPoly's desk, with you student card (Camipro) to collect your money" %}.</li>
     </ul>
 
     <h3>{% trans "To buy a book" %}</h3>
@@ -42,7 +42,7 @@
     <ul>
         <li>{% trans "You browse this website to find a book" %}</li>
         <li>{% trans "You memorise the number of the book (NOT THE ISBN NUMBER !)" %}</li>
-        <li>{% trans "If you found what you needed, you can come to the AGEPoly's desk with the money (only in cash !)" %}</li>
+        <li>{% trans "If you found what you needed, you can come to AGEPoly's event with the money (in cash or camipro !)" %}</li>
         <li>{% trans "You now have a new book !" %}</li>
     </ul>
 
