--- a/polybookexchange/templates/polybookexchange/propose_ok.html
+++ b/polybookexchange/templates/polybookexchange/propose_ok.html
@@ -9,7 +9,7 @@
 
     {% trans "You now have to print" %}
         <a href="{% url 'polybookexchange.views.candidate_card' c.pk %}" target="_blank">{% trans "this page (open a new windows)" %}</a>
-    {% trans "and put it inside the book. Don't forget to bring the book in 14 days !" %}
+    {% trans "and put it inside the book. Don't forget to bring the book to the event !" %}
 
 
     <span class="pull-right">
