--- a/polybookexchange/templates/polybookexchange/exemplar.html
+++ b/polybookexchange/templates/polybookexchange/exemplar.html
@@ -64,6 +64,15 @@
                     <div class="col-md-6">
                         <b>{% trans "Out Reason:" %}</b> {{ exemplar.out_reason }}
                     </div>    
+                    <div class="col-md-6">
+                    {% if exemplar.money_given_date %}
+                        <b>{% trans "Money Given to Seller On:" %}</b> {{exemplar.money_given_date}}
+                    {% elif exemplar.out_reason == 'sold' or exemplar.out_reason == 'lost' %}
+                        {% trans "Money has not been given yet" %}
+                    {% else %}                
+                        {% trans "No Money to give to Seller:" %}
+                    {% endif %}                
+                    </div>
                 </div>
             {% endif %}
 
