Add financials infos

--- a/polybookexchange/templates/polybookexchange/admin.html
+++ b/polybookexchange/templates/polybookexchange/admin.html
@@ -67,6 +67,14 @@
                 </div>
                 </div>
             </div>
+            <div class="col-md-2">
+                <div class="thumbnail">
+                <div class="caption" style="text-align: center;">
+                    <h3><i class="glyphicon glyphicon-dollar"></i></h3>
+                    <p><a href="{% url "polybookexchange.views.financial_infos" %}" class="btn btn-warning" role="button">{% trans "Financial Infos" %}</a></p>
+                </div>
+                </div>
+            </div>
         </div>
         <div class="row">
 
