Fixed some small typo(s) :crab: :rooster:

--- a/polybookexchange/templates/polybookexchange/add_book_request.html
+++ b/polybookexchange/templates/polybookexchange/add_book_request.html
@@ -10,7 +10,7 @@
 
     {% if warning_candidate %}
         <div class="alert alert-danger">
-            {% trans "Cannot find the candidate. Is he already validated ?" %}
+            {% trans "Cannot find the candidate. Is it already validated ?" %}
         </div>
     {% endif %}
 
