--- a/polybookexchange/templates/polybookexchange/candidate_fiche.html
+++ b/polybookexchange/templates/polybookexchange/candidate_fiche.html
@@ -32,7 +32,7 @@
 
         </table>
 
-        {% trans "Your book will only be available in the sell area when you bring him to AGEPoly's event and we validated it" %}<br />
+        {% trans "Your book will only be available in the sell area when you bring it to AGEPoly's event and we validated it" %}<br />
 
         {% trans "You can access this page later using the left menu if you cannot print it now." %}<br /><br />
 
