--- a/polybookexchange/templates/polybookexchange/emails/book_insale.html
+++ b/polybookexchange/templates/polybookexchange/emails/book_insale.html
@@ -2,12 +2,16 @@
 Hi !<br />
 <br />
 One of your book (Title: <b>{{title}}</b>, exemplar id: <b>{{id}}</b>) is now in sale !<br />
+<br />At the end of the book exchange event, your book will be automaticaly transfered to the online book exchange (this website). Please note that it is your responsibility to get your book back : if you haven't asked for your book in 12 months, it will be automaticaly given to the central library, without the possibility to get it or your money back.<br/>
 <br />
-Thanks you for using the book exchange !<br />
+If you have any questions, don't hesitate to email services@agepoly.ch ! 
 <br />
-Bests,<br />
 <br />
-The AGEPoly's book exchange,<br />
+Thank you for using the book exchange !<br />
+<br />
+Best,<br />
+<br />
+AGEPoly's book exchange,<br />
 <br />
 <br />
 <i>(This email is sent automaticaly when a book is validated)</i>{% endblocktrans %}
