--- a/polybookexchange/templates/polybookexchange/emails/book_removed.html
+++ b/polybookexchange/templates/polybookexchange/emails/book_removed.html
@@ -3,11 +3,11 @@ Hi !<br />
 <br />
 As said in our conditions, your book (exemplar id: <b>{{id}}</b>) has been removed from our system and offered to the main library.<br />
 <br />
-Thanks you for using the book exchange !<br />
+Thank you for using the book exchange !<br />
 <br />
-Bests,<br />
+Best,<br />
 <br />
-The AGEPoly's book exchange,<br />
+AGEPoly's book exchange,<br />
 <br />
 <br />
 <i>(This email is sent automaticaly when a book is removed)</i>{% endblocktrans %}
