--- a/polybookexchange/templates/polybookexchange/emails/book_sold.html
+++ b/polybookexchange/templates/polybookexchange/emails/book_sold.html
@@ -4,11 +4,11 @@ Hi !<br />
 One of your book (Title: <b>{{title}}</b>, exemplar id: <b>{{id}}</b>) has been sold ! 
 You will soon receive informations about how to receive your money ! <br />
 <br />
-Thanks you for using the book exchange !<br />
+Thank you for using the book exchange !<br />
 <br />
-Bests,<br />
+Best,<br />
 <br />
-The AGEPoly's book exchange,<br />
+AGEPoly's book exchange,<br />
 <br />
 <br />
 <i>(This email is sent automaticaly when a book is sold)</i>{% endblocktrans %}
