--- a/polybookexchange/templates/polybookexchange/base.html
+++ b/polybookexchange/templates/polybookexchange/base.html
@@ -72,7 +72,7 @@
           <ul class="nav nav-sidebar">
             <li class="dropdown-header">{% trans "General" %}</li>
             <li id="polybook-menu-home"><a href="{% url 'polybookexchange.views.home' %}">{% trans "Home" %}</a></li>
-            <li id="polybook-menu-howto"><a href="{% url 'polybookexchange.views.howto' %}">{% trans "How it works ?" %}</a></li>
+            <li id="polybook-menu-howto"><a href="{% url 'polybookexchange.views.howto' %}">{% trans "How does it works ?" %}</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li class="dropdown-header">{% trans "Buy books" %}</li>
