Apply max requests

--- a/polybookexchange/templates/polybookexchange/exemplar.html
+++ b/polybookexchange/templates/polybookexchange/exemplar.html
@@ -70,7 +70,7 @@
                     {% elif exemplar.out_reason == 'sold' or exemplar.out_reason == 'lost' %}
                         {% trans "Money has not been given yet" %}
                     {% else %}                
-                        {% trans "No Money to give to Seller:" %}
+                        {% trans "No Money to give to Seller" %}
                     {% endif %}                
                     </div>
                 </div>
