--- a/polybookexchange/templates/polybookexchange/base.html
+++ b/polybookexchange/templates/polybookexchange/base.html
@@ -25,7 +25,10 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'polybookexchange/bootstrap/js/bootstrap.min.js' %}"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.min.css" integrity="sha512-zrPsLVYkdDha4rbMGgk9892aIBPeXti7W77FwOuOBV85bhRYi9Gh+gK+GWJzrUnaCiIEm7YfXOxW8rzYyTuI1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- print.js -->
+    <script src="{% static 'polybookexchange/print.min.js' %}"></script>
+    <link href="{% static 'polybookexchange/print.min.css' %}" rel="stylesheet">
+  
 </head>
 
 <body>
@@ -132,7 +135,6 @@
 
         </script>
     {% endif %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.min.js" integrity="sha512-16cHhHqb1CbkfAWbdF/jgyb/FDZ3SdQacXG8vaOauQrHhpklfptATwMFAc35Cd62CQVN40KDTYo9TIsQhDtMFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
