--- a/polybookexchange/templates/polybookexchange/financial_infos.html
+++ b/polybookexchange/templates/polybookexchange/financial_infos.html
@@ -7,12 +7,12 @@
 {% block content %}
 
     <h1 class="page-header">{% trans "Financials Infos" %}</h1>
-    <div><p>Total price of book sold : {{ all_sold_books }} CHF</p></div>
-    <div><p>Total value of book losts : {{ all_lost_books }} CHF</p></div>
-    <div><p>Total amount of money already given to sellers: {{ all_given_money }} CHF</p></div>
-    <div><p>Total money owed to sellers : {{ result }} CHF</p></div>
+    <div><p>{% trans "Total price of book sold:"%} {{all_sold_books}} CHF</p></div>
+    <div><p>{% trans "Total value of book losts:"%} {{all_lost_books}} CHF</p></div>
+    <div><p>{% trans "Total amount of money already given to sellers:"%} {{all_given_money}} CHF</p></div>
+    <div><p>{% trans "Total money owed to sellers :"%} {{result}} CHF</p></div>
 
-    <p>Money owed to sellers since more than one year</p>
+    <p>{% trans "Money owed to sellers since more than one year"%}</p>
     <table style="width: 100%;" class="table table-striped">
                 <thead>
                 <tr>
@@ -32,7 +32,7 @@
                         <td>{{ex.book.title}}</td>
                         <td>{{ex.price|floatformat:2}}</td>
                         <td>{{ex.sold_date}}</td>
-                        <td><a href="{% url 'polybookexchange.views.give_money_back' %}?sciper={{ ex.seller_id }}">{{ex.seller_id}}</a></td>
+                        <td><a href="{% url 'polybookexchange.views.give_money_back' %}?sciper={{ex.seller_id}}">{{ex.seller_id}}</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
