--- a/polybookexchange/templates/polybookexchange/emails/price_change.html
+++ b/polybookexchange/templates/polybookexchange/emails/price_change.html
@@ -1,8 +1,8 @@
 {% load i18n %}{% blocktrans with id=exemplar.pk price=exemplar.price %}
 Hi !<br />
 <br />
-The book exemplar <b>{{id}}</b> has a new price: <b>{{price}}</b> !<br />
+The book exemplar <b>{{id}}</b> has a new price: <b>{{price}}</b>!<br />
 <br />
-Bests,<br />
+Best,<br />
 <br />
-The book exchange,{% endblocktrans %}
+AGEPoly's book exchange,{% endblocktrans %}
