--- a/polybookexchange/templates/polybookexchange/howto.html
+++ b/polybookexchange/templates/polybookexchange/howto.html
@@ -13,7 +13,7 @@
         AGEPoly takes care of the storage of your books and sell them for you, without any fees.
     {% endblocktrans %}
 
-    <h2>{% trans "How the book exchange works ?" %}</h2>
+    <h2>{% trans "How does the book exchange works ?" %}</h2>
 
 
     {% trans "The system is very simple:" %}
@@ -25,7 +25,7 @@
     <ul>
         <li>{% trans "You click on 'Propose a new book' in the left menu" %}.</li>
         <li>{% trans "You fill required informations and you print the generated page." %}</li>
-        <li>{% trans "You bring your book, with the printed page at the AGEPoly's desk." %}</li>
+        <li>{% trans "You bring your book, with the printed page at AGEPoly's event." %}</li>
     </ul>
 
     <h4>{% trans "Second step" %}</h4>
@@ -33,16 +33,16 @@
     <ul>
         <li>{% trans "We put your book in the system." %}</li>
         <li>{% trans "You get an automatic confirmation on your @epfl.ch address." %}</li>
-        <li>{% trans "When your book has been sold by another student, you will also recive an automatic email" %}</li>
-        <li>{% trans "At least, you can comme back to the AGEPoly's desk, with you student card (Camipro) to collect your money" %}.</li>
+        <li>{% trans "When your book has been sold to another student, you will also receive an automatic email" %}</li>
+        <li>{% trans "At last, you can come back to AGEPoly's desk, with you student card (Camipro) to collect your money" %}.</li>
     </ul>
 
     <h3>{% trans "To buy a book" %}</h3>
 
     <ul>
         <li>{% trans "You browse this website to find a book" %}</li>
-        <li>{% trans "You memorise the number of the book (NOT THE ISBN NUMBER !)" %}</li>
-        <li>{% trans "If you found what you needed, you can come to the AGEPoly's desk with the money (only in cash !)" %}</li>
+        <li>{% trans "You memorise the number of the book (NOT THE ISBN NUMBER!)" %}</li>
+        <li>{% trans "If you found what you needed, you can come to AGEPoly's event with the money (in cash or camipro!)" %}</li>
         <li>{% trans "You now have a new book !" %}</li>
     </ul>
 
@@ -51,8 +51,8 @@
     <ul>
 
         <li>{% trans "The seller must be an EPFL student" %}</li>
-        <li>{% trans "The AGEPoly won't be responsible for any lost or stolen book" %}</li>
-        <li>{% trans "The AGEPoly won't be responsible for any deterioration of a book" %}</li>
+        <li>{% trans "AGEPoly won't be responsible for any lost or stolen book" %}</li>
+        <li>{% trans "AGEPoly won't be responsible for any deterioration of a book" %}</li>
         <li>{% trans "Handouts and language learning books cannot be sold using the book exchange" %}</li>
         <li>{% trans "The service is free, for EPFL students" %}</li>
         <li>{% trans "If a book isn't sold or taken back after 14 months," %}<span class="text-danger">{% trans "it's your responsibilty to get your book back at AGEPoly's desk, otherwhise he will be given to the central library, without the posibily to get it or your money back !" %}</span></li>
