--- a/polybookexchange/templates/polybookexchange/index.html
+++ b/polybookexchange/templates/polybookexchange/index.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-    <h1 class="page-header">{% trans "Welcome on the AGEPoly's book exchange !" %}</h1>
+    <h1 class="page-header">{% trans "Welcome to AGEPoly's book exchange!" %}</h1>
 
-    <a href="{% url 'polybookexchange.views.howto' %}">{% trans "How it works ?" %}</a>
+    <a href="{% url 'polybookexchange.views.howto' %}">{% trans "How does it works ?" %}</a>
 
     <h3>{% trans "Last book to buy" %}</h3>
 
