--- a/polybookexchange/templates/polybookexchange/propose.html
+++ b/polybookexchange/templates/polybookexchange/propose.html
@@ -5,21 +5,21 @@
 
 {% block content %}
 
-    <h1 class="page-header">{% trans "Add a new candidate to sell" %}</h1>
+    <h1 class="page-header">{% trans "Add a new sales candidate" %}</h1>
 
     {% if error %}
         <div class="alert alert-danger">
-            {% trans "There was an error submiting your book. Did you filled all fields ? Please try again." %}
+            {% trans "There was an error submiting your book. Did you fill all fields ? Please try again." %}
         </div>
     {% endif %}
 
-    {% trans "This page is the first step in the process to sell your book. You will pre-register the book in our database. You will then get a recepie that you need to bring your book at AGEPoly's desk." %}<br /><br />
+    {% trans "This page is the first step in the process to sell your book. You will pre-register the book in our database. You will then get a recepie that you need to bring your book at AGEPoly's event (from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515)." %}<br /><br />
 
     <div class="alert alert-warning">
-        {% trans "One the book submited, you have 14 days to bring it to the AGEPoly's desk!" %}
+        {% trans "Once the book is submitted, you have to bring it to AGEPoly's book exchange at CE1 515 from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM!" %}
     </div>
 
-    <form method="POST" onsubmit="if (!$('#terms').is(':checked')) { alert('{% trans "Please accepts terms !" %}'); return false }">
+    <form method="POST" onsubmit="if (!$('#terms').is(':checked')) { alert('{% trans "Please accepts terms!" %}'); return false }">
         {% csrf_token %}
 
         <div class="form-group" id="form-group-isbn">
