--- a/polybookexchange/templates/polybookexchange/exemplar.html
+++ b/polybookexchange/templates/polybookexchange/exemplar.html
@@ -62,16 +62,16 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <b>{% trans "Out Reason:" %}</b> {{ exemplar.out_reason }}
-                    </div>    
+                        <b>{% trans "Out Reason:" %}</b> {{ exemplar.get_out_reason_display }}
+                    </div>
                     <div class="col-md-6">
                     {% if exemplar.money_given_date %}
                         <b>{% trans "Money Given to Seller On:" %}</b> {{exemplar.money_given_date}}
                     {% elif exemplar.out_reason == 'sold' or exemplar.out_reason == 'lost' %}
                         {% trans "Money has not been given yet" %}
-                    {% else %}                
+                    {% else %}
                         {% trans "No Money to give to Seller" %}
-                    {% endif %}                
+                    {% endif %}
                     </div>
                 </div>
             {% endif %}
