Add out reason, money_back and a page for financials infos (#8)
Co-authored-by: Arnaud Gaudard <gaudard@protonmail.ch>

--- a/polybookexchange/templates/polybookexchange/base.html
+++ b/polybookexchange/templates/polybookexchange/base.html
@@ -25,6 +25,10 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'polybookexchange/bootstrap/js/bootstrap.min.js' %}"></script>
 
+    <!-- print.js -->
+    <script src="{% static 'polybookexchange/print.min.js' %}"></script>
+    <link href="{% static 'polybookexchange/print.min.css' %}" rel="stylesheet">
+  
 </head>
 
 <body>
@@ -131,7 +135,6 @@
 
         </script>
     {% endif %}
-   
 </body>
 
 </html>
