Fix template for the candidate fiche and translations

--- a/polybookexchange/templates/polybookexchange/candidate_fiche.html
+++ b/polybookexchange/templates/polybookexchange/candidate_fiche.html
@@ -5,7 +5,7 @@
     <body>
         <h2>{% trans "Book proposition's details " %}</h2>
 
-        <p>{% trans "You have to <a href='javascript:window.print()'>print</a> this page and put it inside the book you bring to AGEPoly's event "it inside the book you bring to AGEPoly's event from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515 (or present this document there) " %}<br />
+        <p>{% trans "You have to <a href='javascript:window.print()'>print</a> this page and put it inside the book you bring to AGEPoly's event from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515 (or present this document there)" %}<br />
         <br />
 
         <table>
